force-app/main/default/objects/HOD__c/HOD__c.object-meta.xml
<CustomObject>
    <label>HOD</label>
    <nameField>
        <label>HOD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HODs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>