force-app/main/default/objects/HOD__c/fields/HOD_ID__c.field-meta.xml
<CustomField>
    <fullName>HOD_ID__c</fullName>
    <displayFormat>HOD-{0000}</displayFormat>
    <label>HOD ID</label>
    <type>AutoNumber</type>
</CustomField>