force-app/main/default/objects/HOD__c/fields/Office_Room__c.field-meta.xml
<CustomField>
    <fullName>Office_Room__c</fullName>
    <label>Office Room</label>
    <length>40</length>
    <type>Text</type>
</CustomField>