force-app/main/default/objects/HOD__c/fields/Retirement_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Eligibility__c</fullName>
    <formula>IF(
Experience__c&gt;=30,
&quot;Eligible&quot;,
&quot;Not Eligible&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retirement Eligibility</label>
    <type>Text</type>
</CustomField>