force-app/main/default/objects/HOD__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <length>120</length>
    <type>Text</type>
</CustomField>