force-app/main/default/objects/HOD__c/fields/Years_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Service__c</fullName>
    <formula>FLOOR(
(TODAY() - Joining_Date__c) / 365
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Years of Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>