force-app/main/default/objects/HOD__c/validationRules/Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
REGEX(
Email__c,
&quot;^[A-Za-z0-9._%+-]+@college\\.edu$&quot;
)
)</errorConditionFormula>
    <errorMessage>Only use college email for work</errorMessage>
</ValidationRule>