force-app/main/default/objects/HOD__c/validationRules/Employee_ID_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_ID_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Employee_ID__c)</errorConditionFormula>
    <errorMessage>HOD must have an employee Id</errorMessage>
</ValidationRule>