force-app/main/default/objects/HOD__c/validationRules/Experience_should_be_minimum_5_years.validationRule-meta.xml
<ValidationRule>
    <fullName>Experience_should_be_minimum_5_years</fullName>
    <active>true</active>
    <errorConditionFormula>Experience__c &lt; 5</errorConditionFormula>
    <errorMessage>HOD should have minimum 5 years of experience.</errorMessage>
</ValidationRule>