force-app/main/default/objects/HOD__c/validationRules/Joining_Date_cannot_be_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Joining_Date_cannot_be_future</fullName>
    <active>true</active>
    <errorConditionFormula>Joining_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Joining date should not in the future</errorMessage>
</ValidationRule>